--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2024.09.00"
 #
 navigation= "2.9.6"
 foundation = "1.9.4"
+shimmer = "1.3.3"
 
 
 [libraries]
@@ -30,6 +31,8 @@ androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-te
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 #
 androidx-navigation-compose={module="androidx.navigation:navigation-compose",version.ref="navigation"}
+#
+shimmer = { group = "com.valentinilk", name = "compose-shimmer", version.ref = "shimmer" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 
 
